<?xml version="1.0"?>
<package format="2">
  <name>dolidar_ysm</name>
  <version>0.0.1</version>
  <description>The dolidar_ysm package</description>

  <maintainer email="yoo@todo.todo">yoo</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Export dependencies for runtime -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- System dependencies -->
  <!-- Open3D, Eigen은 system dependency로 명시 가능 -->
  <exec_depend>libopen3d-dev</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>

  <export>
    <!-- 추가 정보가 필요 없다면 비워둡니다 -->
  </export>
</package>
