<?xml version="1.0"?>
<package format="2">
  <name>lidar_example_pkg</name>
  <version>0.0.1</version>
  <description>Example package for lidar processing</description>

  <!-- Maintainer -->
  <maintainer email="yoo@todo.todo">yoo</maintainer>

  <!-- License -->
  <license>BSD</license>

  <!-- 빌드 및 실행 의존성 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>hdbscan</exec_depend>


  <!-- Export -->
  <export>
  </export>
</package>
